--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#ffffff" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#ffffff" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff" />
     <meta
       name="Catriona Mackenzie Portfolio"
       content="Web site created using React & Tailwind"
